--- a/systemsvis.html
+++ b/systemsvis.html
@@ -6,6 +6,7 @@
 	<script src="external/jquery-2.1.1.js" type="text/javascript"></script>
 	<script src="external/three.js" type="text/javascript"></script>
 	<script src="external/TrackballControls.js" type="text/javascript"></script>
+	<script src="tgc.js" type="text/javascript"></script>
 	<style>
 		body {
 			color: #ffffff;
@@ -26,9 +27,7 @@
 var renderer, scene, camera, refCloud, pointCloud;
 var axes;
 
-var systemsMap = {};		// reference system data
 var systems = [];
-var lastFetch = '2014-09-09 12:13:14Z';
 
 var cmdrColors = ['gray', 'aqua', 'blue', 'navy', 'teal', 'lime', 'green', 'fuchsia', 'purple', 'red', 'maroon', 'orange', 'yellow', 'olive','white'];
 var cmdrColorMap = {};
@@ -216,85 +215,6 @@ function render() {
 	renderer.render(scene, camera);
 }
 
-function addSystems(systems) {
-	var count = 0; rejected = 0;
-	$.each(systems, function() {
-		if (this.coord) {
-			systemsMap[nameKey(this.name)] = {
-				x: this.coord[0],
-				y: this.coord[1],
-				z: this.coord[2],
-				name: this.name,
-				calculated: this.commandercreate !== 'FD',
-				cr: this.cr,
-				contributor: this.commandercreate ? this.commandercreate : '(unknown)',
-				contributed: this.createdate
-			};
-			count++;
-		} else {
-			rejected++;
-		}
-	});
-//	if (rejected > 0) msg += 'Rejected '+rejected+' systems. ';
-}
-
-function getTGCData(callback) {
-	$.getJSON('tgcsystems.json', function(data) {
-		lastFetch = data.date+'Z';
-		systemsMap = {};
-		addSystems(data.systems);
-		logAppend('Loaded tgcsystems.json: data up to '+data.date+'. Total number of systems: '+Object.keys(systemsMap).length+'\n');
-	}).fail(function() {
-		logAppend('Failed to read from tgcsystems.json\n');
-	}).always(function() {
-		// update with any additional data from the server
-		updateTGCData(callback);
-	});
-}
-
-function updateTGCData(callback) {
-	$.ajax({
-		type: 'POST',
-		contentType: 'application/json; charset=utf-8',
-		url: 'http://edstarcoordinator.com/api.asmx/GetSystems',
-		data: JSON.stringify({data: {
-			ver: 2,
-			outputmode: 2,
-			filter: {
-				cr: 1,
-				date: lastFetch
-			}
-		}}),
-		dataType: 'json',
-		success: function(data, status, xhr) {
-			data = data.d;
-			//console.log(JSON.stringify(data, null, 2));
-			if (data.status.input[0].status.statusnum !== 0) {
-				logAppend('Error from TGC server: '+data.status.input[0].status.statusnum +' '+data.status.input[0].status.msg+'\n');
-			} else {
-				addSystems(data.systems);
-				logAppend('Fetched '+data.systems.length+' systems from TGC. Total number of systems: '+Object.keys(systemsMap).length+'\n');
-			}
-			callback();
-		},
-		error: function(xhr, status, error) {
-			//console.log(xhr.responseText);
-			logAppend(error+'\n');
-			console.log('Error from TGC server: '+error);
-			console.log('Request was:');
-			console.log(JSON.stringify(query, null, 2));
-			callback();
-		}
-	});
-}
-
-function logAppend(str) {
-	console.log(str);
-}
-
-function nameKey(n) {
-	return $.trim(n.toLowerCase());
-}
 	</script>
 </head>
 <body>
