Changed reference systems due to broken systems in TGC.

--- a/entry.html
+++ b/entry.html
@@ -534,13 +534,13 @@ function getLocalSystems(coords) {
 				</tr>
 			</thead>
 			<tbody>
-				<tr><td><input class="system-name" value="Sol"></td><td><input class="distance"></td><td/><td/></tr>
-				<tr><td><input class="system-name" value="Kato"></td><td><input class="distance"></td><td/><td/></tr>
-				<tr><td><input class="system-name" value="Cayu"></td><td><input class="distance"></td><td/><td/></tr>
+				<tr><td><input class="system-name" value="Sirius"></td><td><input class="distance"></td><td/><td/></tr>
+				<tr><td><input class="system-name" value="Privir"></td><td><input class="distance"></td><td/><td/></tr>
+				<tr><td><input class="system-name" value="Arug"></td><td><input class="distance"></td><td/><td/></tr>
 				<tr><td><input class="system-name" value="Nuwach"></td><td><input class="distance"></td><td/><td/></tr>
-				<tr><td><input class="system-name" value="Marra"></td><td><input class="distance"></td><td/><td/></tr>
+				<tr><td><input class="system-name" value="Blende"></td><td><input class="distance"></td><td/><td/></tr>
 				<tr><td><input class="system-name" value="Zhuar"></td><td><input class="distance"></td><td/><td/></tr>
-				<tr><td><input class="system-name" value="Juro"></td><td><input class="distance"></td><td/><td/></tr>
+				<tr><td><input class="system-name" value="Bastana"></td><td><input class="distance"></td><td/><td/></tr>
 			</tbody>
 		</table>
 		<div id="ref-warning" class="ui-state-error ui-corner-all" style="margin: 0.5em; display:none">
