Extra expert mode stuff: recently added systems list and button that adds unlocated systems previously added by the current commander. Suggestion function that shows good options for reference systems. Expanded list of nearby systems: out to 20 Ly and includes entered distances so better for comparing to nav panel.

--- a/entry.html
+++ b/entry.html
@@ -18,7 +18,7 @@
 // TODO optimisation
 // TODO consider not clearing the form if TGC can't trilaterate
 
-var expertMode = false;	// if true then allows submission of any data. use with care.
+var expertMode = false;	// if true then allows submission of any data. use with care. also enables "recently added" list and "add unfinished button"
 
 var systemData = null;	// current system data
 var jsonOutput = "";
